OneGoogleBarFetcherImplTest: Shutdown() the GoogleURLTracker before destruction

GoogleURLTracker registers itself as a NetworkChangeObserver at the
NetworkChangeNotifier singleton, and unregisters itself again in Shutdown().
In non-test code, GoogleURLTracker is a KeyedService and so its Shutdown()
gets called at the proper time automatically. But in unit tests that
instantiate it directly, we have to explicitly call Shutdown(),
otherwise we leave behind a dangling pointer.

Bug: 823858
Change-Id: Idc215823ad81c983c8693c04688eccce40f9f26c
Reviewed-on: https://chromium-review.googlesource.com/973603
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545017}
Former-commit-id: ba7b02ff0cbe99e37c7a587858412c62a64fb549